--- a/client/src/styles/values.scss
+++ b/client/src/styles/values.scss
@@ -8,9 +8,14 @@ $secondaryColor: #FFAB00;
 $lightSecondaryColor: #FFC040;
 $darkSecondaryColor: #BF9030;
 
+$greyColor: #bab2ac;
+
+
 $lightTextColor: #FFFFFF;
 $darkTextColor: #000000;
 
+
 $smallBreak: 640px;
 $mediumBreak: 1280px;
-$menuHeight: 120px;
+$menuWidth: 240px;
+
