--- a/client/src/scripts/auth/partials/auth.html
+++ b/client/src/scripts/auth/partials/auth.html
@@ -1,16 +1,16 @@
-<div>
+<div class="auth-form">
     <h1>Heimdall</h1>
-    <span>Connectez-vous</span>
 
     <form novalidate name="authForm">
         <div class="form-group">
-            <label for="email">{{'Email' | translate}}</label>
-            <input type="email" id="email" name="email" ng-model="user.email" required/>
+            <input type="email" id="email" name="email" ng-model="user.email" required placeholder="{{'Email *' | translate}}"/>
         </div>
         <div class="form-group">
-            <label for="password">{{'Password' | translate}}</label>
-            <input type="password" id="password" name="password" ng-model="user.password" required/>
+            <input type="password" id="password" name="password" ng-model="user.password" required placeholder="{{'Password * ' | translate}}"/>
         </div>
-        <button type="submit" ng-click="submit()">{{'Sign In' | translate}}</button>
+        <div class="form-button">
+            <div class="no-account">{{'No Account' | translate}}</div>
+            <button type="submit" ng-click="submit()" v-busy="logInProgress" v-pressable>Sign In</button>
+        </div>
     </form>
 </div>
