--- a/client/src/styles/commun.scss
+++ b/client/src/styles/commun.scss
@@ -56,7 +56,10 @@ h1 {
 }
 
 #wrapper {
-
+    margin-left: $menuWidth;
+    display: block;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 .full-screen {
@@ -65,4 +68,52 @@ h1 {
     width: 100%;
 }
 
+button {
+    background: $primaryColor;
+    color: $lightTextColor;
+    padding: 10px 17px;
+    border: none;
+    box-shadow: none;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+    appearance: none;
 
+    &:hover {
+        background: $darkPrimaryColor;
+    }
+
+    &:active, &:focus {
+        outline: 0;
+    }
+
+    &.secondary {
+        background: $secondaryColor;
+        color: $lightTextColor;
+        &:hover {
+            background: $darkSecondaryColor;
+        }
+    }
+}
+
+input {
+    padding: 10px 15px;
+    border-radius: 3px;
+    border: 1px solid $greyColor;
+    outline: none;
+    transition: all 0.3s ease;
+
+    &:focus {
+        border-bottom: 1px solid transparent;
+        box-shadow: 0px 3px $primaryColor;
+    }
+}
+
+form.ng-submitted {
+    input.ng-invalid {
+        border: 1px solid brown;
+        &:focus {
+            border: 1px solid $greyColor;
+            border-bottom: 1px solid transparent;
+        }
+    }
+}
