add translate + create project

--- a/client/src/scripts/auth/styles/auth.scss
+++ b/client/src/scripts/auth/styles/auth.scss
@@ -16,7 +16,7 @@
 
     .auth-form {
         display: inline-block;
-        width: 40%;
+        width: 500px;
         padding: 20px;
         background: rgba(255, 255, 255, 0.7);
         border-radius: 5px;
