--- a/client/src/scripts/project/styles/projects.scss
+++ b/client/src/scripts/project/styles/projects.scss
@@ -71,10 +71,10 @@ $widthForm: 450px;
         }
 
         .project {
-            width: 250px;
+            width: 30.5%;
             height: 250px;
             float: left;
-            margin: 20px 0 0 20px;
+            margin: 2% 0 0 2%;
             border: 1px solid $primaryColor;
             border-radius: 3px;
             position: relative;
@@ -94,12 +94,12 @@ $widthForm: 450px;
                 transform: translate3d(0, 0, 0);
                 position: absolute;
                 bottom: 0;
-                z-index: 10;
             }
             .desc {
                 transform: translate3d(0, 0, 0);
                 transition: all 0.3s ease;
-                z-index: 1;
+                font-size: 10rem;
+                color: $primaryColor;
             }
 
             &:hover {
@@ -110,6 +110,24 @@ $widthForm: 450px;
                 .desc {
                     transform: translate3d(0,  60px, 0);
                 }
+            }
+        }
+
+        .help-empty-project {
+            position: absolute;
+            top: 150px;
+            left: 35%;
+            color: $greyColor;
+            .arrow {
+                width: 70px;
+                height: 70px;
+                background: $greyColor;
+                transform: rotate(200deg);
+                -webkit-mask: url(../assets/arrow-35.svg) center / contain no-repeat;
+            }
+            .text {
+                margin-left: 50px;
+                margin-top: 10px;
             }
         }
 
