Remove strong loop and start api work

--- a/client/src/scripts/auth/partials/auth.html
+++ b/client/src/scripts/auth/partials/auth.html
@@ -1,6 +1,6 @@
 <div class="auth-form">
-    <h1>Heimdall</h1>
-
+    <h1>Peashooter</h1>
+    <span class="generality" ng-bind-html="'Generality' | translate"></span>
     <form novalidate name="authForm">
         <div class="form-group">
             <input type="email" id="email" name="email" ng-model="user.email" required placeholder="{{'Email *' | translate}}"/>
