--- a/client/src/styles/values.scss
+++ b/client/src/styles/values.scss
@@ -8,7 +8,7 @@ $secondaryColor: #FFAB00;
 $lightSecondaryColor: #FFC040;
 $darkSecondaryColor: #BF9030;
 
-$greyColor: #bab2ac;
+$greyColor: #8a837e;
 
 
 $lightTextColor: #FFFFFF;
