--- a/client/src/scripts/home/partials/home.html
+++ b/client/src/scripts/home/partials/home.html
@@ -1,4 +1,19 @@
 <div>
-    <h1>Home</h1>
+
+    <div class="box small-box count-box">
+        <h2>{{'Count project' | translate}}</h2>
+        <span>{{countProject}}</span>
+    </div>
+
+    <div class="box small-box count-box">
+        <h2>{{'Count version' | translate}}</h2>
+        <span>{{countVersion}}</span>
+    </div>
+
+    <div class="box small-box count-box">
+        <h2>{{'Count build' | translate}}</h2>
+        <span>{{countBuild}}</span>
+    </div>
+
 
 </div>
