--- a/client/src/styles/values.scss
+++ b/client/src/styles/values.scss
@@ -4,9 +4,9 @@ $primaryColor: #00AC6B;
 $lightPrimaryColor: #35D699;
 $darkPrimaryColor: #20815D;
 
-$secondaryColor: #FFAB00;
-$lightSecondaryColor: #FFC040;
-$darkSecondaryColor: #BF9030;
+$secondaryColor: #E9003A;
+$lightSecondaryColor: #F46E8F;
+$darkSecondaryColor: #970026;
 
 $greyColor: #8a837e;
 
@@ -18,4 +18,4 @@ $darkTextColor: #000000;
 $smallBreak: 640px;
 $mediumBreak: 1280px;
 $menuWidth: 240px;
-
+$widthForm: 450px;
