--- a/client/src/scripts/project/styles/projects.scss
+++ b/client/src/scripts/project/styles/projects.scss
@@ -1,7 +1,5 @@
 @import '../../../styles/values';
 
-$widthForm: 450px;
-
 .page-project {
 
     .projects-container {
@@ -32,6 +30,7 @@ $widthForm: 450px;
             border: 2px solid $primaryColor;
             padding: 5px 5px 3px 5px;
             margin: 10px;
+            cursor: pointer;
         }
 
         p {
@@ -58,16 +57,6 @@ $widthForm: 450px;
 
         &.open {
             transform: translate3d($widthForm, 0, 0);
-
-            &::after {
-                display: block;
-                width: 100%;
-                height: 100%;
-                content: '';
-                background: $greyColor;
-                position: absolute;
-                opacity: 0.5;
-            }
         }
 
         .project {
