correct title style

--- a/client/src/scripts/auth/styles/auth.scss
+++ b/client/src/scripts/auth/styles/auth.scss
@@ -7,6 +7,12 @@
     background-repeat: no-repeat;
     font-size: 1.5rem;
 
+    h1 {
+        text-align: left;
+        margin: 0;
+        top: 0;
+    }
+
     #wrapper {
         margin: 0;
         display: flex;
