--- a/client/src/scripts/navigation/partials/heimdall-navigation.html
+++ b/client/src/scripts/navigation/partials/heimdall-navigation.html
@@ -7,7 +7,8 @@
     <ul>
         <li><a ui-sref="home" ng-class="{'active': itemIsSelected('home')}"><span class="glyphicon glyphicon-home"></span>{{'Home' | translate}}</a></li>
         <li><a ui-sref="project" ng-class="{'active': itemIsSelected('project')}"><span class="glyphicon glyphicon-star"></span>{{'Projects' | translate}}</a></li>
-        <li><a ui-sref="version" ng-class="{'active': itemIsSelected('version')}"><span class="glyphicon glyphicon-briefcase"></span>{{'Version' | translate}}</a></li>
+        <!--<li><a ui-sref="version" ng-class="{'active': itemIsSelected('version')}"><span class="glyphicon glyphicon-briefcase"></span>{{'Version' | translate}}</a></li>-->
         <li><a ui-sref="user" ng-class="{'active': itemIsSelected('user')}"><span class="glyphicon glyphicon-user"></span>{{'Users' | translate}}</a></li>
+        <li><a ui-sref="help" ng-class="{'active': itemIsSelected('help')}"><span class="glyphicon glyphicon-heart"></span>{{'Help' | translate}}</a></li>
     </ul>
 </nav>
