--- a/client/src/scripts/project/partials/project.html
+++ b/client/src/scripts/project/partials/project.html
@@ -16,6 +16,9 @@
         </form>
     </div>
     <div class="list-project full-screen" ng-class="{'open':open}">
+
+        <h1>{{'Projects' | translate }}</h1>
+
         <a href="#" class="project new-project" ng-click="newProject()">
             <div class="glyphicon glyphicon-plus"></div>
             <div class="new-project-label">{{'New Project' | translate}}</div>
