--- a/client/src/scripts/home/styles/home.scss
+++ b/client/src/scripts/home/styles/home.scss
@@ -6,10 +6,10 @@
         float: left;
         display: inline-block;
         padding: 20px;
-        border: 3px solid $greyColor;
+        border: 1px solid $primaryColor;
+        border-radius: 3px;
         color: $primaryColor;
         margin: 20px 0 0 20px;
-        box-shadow: 1px 1px 1px $greyColor;
 
 //        BOX SIZE
         &.small-box {
@@ -22,6 +22,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            transition: all 0.2s ease;
             h2 {
                 text-align: center;
                 font-size: 1.2rem;
@@ -32,7 +33,15 @@
                 align-self: center;
                 color: $primaryColor;
             }
+
+            &:hover {
+                background: $primaryColor;
+                h2, span {
+                    color: $lightTextColor;
+                }
+            }
         }
+
     }
 
 }
