--- a/client/src/scripts/navigation/partials/heimdall-navigation.html
+++ b/client/src/scripts/navigation/partials/heimdall-navigation.html
@@ -11,4 +11,6 @@
         <li><a ui-sref="user" ng-class="{'active': itemIsSelected('user')}"><span class="glyphicon glyphicon-user"></span>{{'Users' | translate}}</a></li>
         <li><a ui-sref="help" ng-class="{'active': itemIsSelected('help')}"><span class="glyphicon glyphicon-heart"></span>{{'Help' | translate}}</a></li>
     </ul>
+
+    <div class="version">v1.0.0 - Copyright 2015</div>
 </nav>
