--- a/client/src/scripts/navigation/styles/navigation.scss
+++ b/client/src/scripts/navigation/styles/navigation.scss
@@ -63,4 +63,13 @@
             }
         }
     }
+
+    .version {
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        bottom: 5px;
+        font-size: 0.8rem;
+        opacity: 0.7;
+    }
 }
