--- a/client/src/scripts/project/partials/project.html
+++ b/client/src/scripts/project/partials/project.html
@@ -27,7 +27,7 @@
             <div class="arrow"></div>
             <div class="text" ng-bind-html="'Help Empty Project' | translate"></div>
         </div>
-        <div class="project" ng-repeat="project in projects">
+        <div class="project" ng-repeat="project in projects" ng-click="goProject(project)">
             <div class="desc">1/2</div>
             <h1 class="title">{{project.title}}</h1>
         </div>
