--- a/client/src/scripts/project/partials/project.html
+++ b/client/src/scripts/project/partials/project.html
@@ -31,7 +31,7 @@
             <div class="desc"></div>
             <h1 class="title">{{project.title}}</h1>
             <div class="list-build">
-                <div ng-repeat="build in builds" ng-click="goBuild(build)"></div>
+                <div ng-repeat="build in project.builds" ng-click="goBuild(build)"></div>
             </div>
         </div>
     </div>
