--- a/client/src/scripts/core/partials/loader.html
+++ b/client/src/scripts/core/partials/loader.html
@@ -1,4 +1,4 @@
-<div class="loader" ng-if="display">
+<div class="loader" ng-show="display">
     <div>
         <span>{{'Wait for a moment please' | translate}}</span>
         <div class="sk-folding-cube">
