--- a/client/src/scripts/project/styles/projects.scss
+++ b/client/src/scripts/project/styles/projects.scss
@@ -56,7 +56,7 @@
         background: white;
         padding: 20px 20px;
         &.open {
-            transform: translate3d($widthForm, 0, 0);
+            left: $widthForm;
         }
 
         h1 {
@@ -100,7 +100,6 @@
             position: absolute;
             top: 150px;
             left: 35%;
-            color: $greyColor;
             .arrow {
                 width: 70px;
                 height: 70px;
