--- a/client/src/styles/fonts.scss
+++ b/client/src/styles/fonts.scss
@@ -38,3 +38,10 @@
     src: url('../assets/fonts/raleway/Raleway-Bold.ttf'), url(http://fonts.gstatic.com/s/raleway/v9/JbtMzqLaYbbbCL9X6EvaI_k_vArhqVIZ0nv9q090hN8.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
+
+@font-face {
+    font-family: 'Gloria Hallelujah';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../assets/fonts/gloria/GloriaHallelujah.ttf');
+}
