--- a/client/src/scripts/project/partials/project.html
+++ b/client/src/scripts/project/partials/project.html
@@ -1,5 +1,5 @@
 <div class="projects-container full-screen">
-    <div class="form-project" ng-class="{'open':open}">
+    <div class="form-crud" ng-class="{'open':open}">
         <span class="glyphicon glyphicon-remove" ng-click="closeProject()"></span>
 
         <h1>{{'Create New Project' | translate}}</h1>
@@ -15,7 +15,7 @@
             </div>
         </form>
     </div>
-    <div class="list-project full-screen" ng-class="{'open':open}">
+    <div class="list-project full-screen inner-container" ng-class="{'open':open}">
 
         <h1>{{'Projects' | translate }}</h1>
 
@@ -27,11 +27,11 @@
             <div class="arrow"></div>
             <div class="text" ng-bind-html="'Help Empty Project' | translate"></div>
         </div>
-        <div class="project" ng-repeat="project in projects">
+        <div class="project" ng-repeat="project in projects" ng-init="getBuildsByProject(project)">
             <div class="desc"></div>
-            <h1 class="title">{{project}}</h1>
+            <h1 class="title">{{project.title}}</h1>
             <div class="list-build">
-                <div ng-repeat="build in project.builds" ng-click="goBuild(build)"></div>
+                <a href="" ng-repeat="build in project.builds" ng-click="goBuild(build)">{{build.name}}</a>
             </div>
         </div>
     </div>
