--- a/client/src/scripts/project/styles/projects.scss
+++ b/client/src/scripts/project/styles/projects.scss
@@ -6,65 +6,7 @@
         position: relative;
     }
 
-    .form-project {
-        position: absolute;
-        left: 0;
-        height: 100%;
-        padding: 20px;
-        opacity: 0;
-        width: $widthForm;
-        transition: all 1.5s ease;
-        box-shadow: inset -4px 0px 8px rgba(0,0,0,0.2);
-
-        &.open {
-            opacity: 1;
-        }
-
-        .glyphicon-remove {
-            position: absolute;
-            right: 0;
-            top: 0;
-            color: $primaryColor;
-            font-size: 2rem;
-            border-radius: 5000px;
-            border: 2px solid $primaryColor;
-            padding: 5px 5px 3px 5px;
-            margin: 10px;
-            cursor: pointer;
-        }
-
-        p {
-            margin:  40px 0 10px 0;
-        }
-
-        input {
-            width: 100%;
-        }
-
-        .form-button {
-            text-align: right;
-            margin-top: 10px;
-        }
-    }
-
     .list-project {
-        position: absolute;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        transition: all 0.3s ease;
-        background: white;
-        padding: 20px 20px;
-        &.open {
-            left: $widthForm;
-        }
-
-        h1 {
-            color: $primaryColor;
-            position: relative;
-            left: -1px;
-            margin-bottom: 15px;
-        }
 
         .project {
             width: 250px;
@@ -138,7 +80,7 @@
                 background: $primaryColor;
 
                 .glyphicon-plus {
-                    border: 1px solid $lightTextColor;
+                    border: 2px solid $lightTextColor;
                     color: $lightTextColor;
                 }
 
@@ -147,6 +89,10 @@
                 }
             }
         }
+    }
+
+    .list-build {
+
     }
 
 }
