--- a/client/src/styles/commun.scss
+++ b/client/src/styles/commun.scss
@@ -136,5 +136,65 @@ form.ng-submitted {
 .helper-message {
     font-family: "Gloria Hallelujah";
     color: $greyColor;
+}
 
+h1 {
+    color: $primaryColor;
+    margin-bottom: 15px;
+}
+
+.inner-container {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s ease;
+    background: white;
+
+    &.open {
+        left: $widthForm;
+    }
+
+    padding: 20px 20px;
+}
+
+.form-crud {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    padding: 20px;
+    opacity: 0;
+    width: $widthForm;
+    transition: all 1.5s ease;
+    box-shadow: inset -4px 0px 8px rgba(0, 0, 0, 0.2);
+
+    &.open {
+        opacity: 1;
+    }
+
+    .glyphicon-remove {
+        position: absolute;
+        right: 0;
+        top: 0;
+        color: $primaryColor;
+        font-size: 2rem;
+        border-radius: 5000px;
+        border: 2px solid $primaryColor;
+        padding: 5px 5px 3px 5px;
+        margin: 10px;
+        cursor: pointer;
+    }
+
+    p {
+        margin: 40px 0 10px 0;
+    }
+
+    input {
+        width: 100%;
+    }
+
+    .form-button {
+        text-align: right;
+        margin-top: 10px;
+    }
 }
