--- a/client/src/scripts/auth/partials/auth.html
+++ b/client/src/scripts/auth/partials/auth.html
@@ -1,16 +1,17 @@
 <div class="auth-form">
     <h1>Peashooter</h1>
+
     <span class="generality" ng-bind-html="'Generality' | translate"></span>
-    <form novalidate name="authForm">
+    <form novalidate name="auth.authForm">
         <div class="form-group">
-            <input type="email" id="email" name="email" ng-model="user.email" required placeholder="{{'Email *' | translate}}"/>
+            <input type="email" id="email" name="email" ng-model="auth.user.email" required placeholder="{{'Email *' | translate}}"/>
         </div>
         <div class="form-group">
-            <input type="password" id="password" name="password" ng-model="user.password" required placeholder="{{'Password * ' | translate}}"/>
+            <input type="password" id="password" name="password" ng-model="auth.user.password" required placeholder="{{'Password * ' | translate}}"/>
         </div>
         <div class="form-button">
             <div class="no-account">{{'No Account' | translate}}</div>
-            <button type="submit" ng-click="submit()" v-busy="logInProgress" v-pressable>Sign In</button>
+            <button type="submit" ng-click="auth.submit()" v-busy="auth.logInProgress" v-pressable>Sign In</button>
         </div>
     </form>
 </div>
