--- a/client/src/scripts/home/partials/home.html
+++ b/client/src/scripts/home/partials/home.html
@@ -1,18 +1,17 @@
 <div>
-
     <div class="box small-box count-box">
         <h2>{{'Count project' | translate}}</h2>
-        <span>{{countProject}}</span>
+        <span>{{homeCtrl.countProject}}</span>
     </div>
 
     <div class="box small-box count-box">
         <h2>{{'Count version' | translate}}</h2>
-        <span>{{countVersion}}</span>
+        <span>{{homeCtrl.countVersion}}</span>
     </div>
 
     <div class="box small-box count-box">
         <h2>{{'Count build' | translate}}</h2>
-        <span>{{countBuild}}</span>
+        <span>{{homeCtrl.countBuild}}</span>
     </div>
 
 
