--- a/client/src/scripts/home/partials/home.html
+++ b/client/src/scripts/home/partials/home.html
@@ -1,8 +1,8 @@
 <div>
-    <div class="box small-box count-box">
+    <a ui-sref="project" class="box small-box count-box">
         <h2>{{'Count project' | translate}}</h2>
         <span>{{homeCtrl.countProject}}</span>
-    </div>
+    </a>
 
     <div class="box small-box count-box">
         <h2>{{'Count version' | translate}}</h2>
