--- a/client/src/scripts/project/partials/project.html
+++ b/client/src/scripts/project/partials/project.html
@@ -19,7 +19,7 @@
 
         <h1>{{'Projects' | translate }}</h1>
 
-        <a href="#" class="project new-project" ng-click="projectCtrl.newProject()">
+        <a href="" class="project new-project" ng-click="projectCtrl.newProject()">
             <div class="glyphicon glyphicon-plus"></div>
             <div class="new-project-label">{{'New Project' | translate}}</div>
         </a>
