--- a/client/src/styles/commun.scss
+++ b/client/src/styles/commun.scss
@@ -198,3 +198,7 @@ h1 {
         margin-top: 10px;
     }
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
