--- a/client/src/scripts/app/auth/partials/auth.html
+++ b/client/src/scripts/app/auth/partials/auth.html
@@ -2,12 +2,12 @@
     <h1>Peashooter</h1>
 
     <span class="generality" ng-bind-html="'Generality' | translate"></span>
-    <form novalidate name="authCtrl.authForm">
+    <form novalidate name="authForm">
         <div class="form-group">
-            <input type="email" id="email" name="email" ng-model="authCtrl.user.email" required placeholder="{{'Email *' | translate}}"/>
+            <input type="email" id="email" name="email" ng-model="user.email" required placeholder="{{'Email *' | translate}}"/>
         </div>
         <div class="form-group">
-            <input type="password" id="password" name="password" ng-model="authCtrl.user.password" required placeholder="{{'Password * ' | translate}}"/>
+            <input type="password" id="password" name="password" ng-model="user.password" required placeholder="{{'Password * ' | translate}}"/>
         </div>
         <div class="form-button">
             <div class="no-account">{{'No Account' | translate}}</div>
