Correct template path

--- a/client/src/scripts/app/auth/styles/auth.scss
+++ b/client/src/scripts/app/auth/styles/auth.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/values";
+@import "../../../../styles/values";
 
 .page-auth, .page-root {
     background: url('../assets/home.jpg');
