--- a/client/src/styles/commun.scss
+++ b/client/src/styles/commun.scss
@@ -5,11 +5,10 @@
  */
 
 html {
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
     // ROOT FONT SIZE
     font-size: 14px;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    tap-highlight-color: rgba(0, 0, 0, 0);
     margin: 0;
     height: 100%;
     width: 100%;
@@ -37,8 +36,6 @@ a:hover {
 }
 
 * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -51,8 +48,6 @@ h1 {
 
 *:before,
 *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -196,6 +191,16 @@ h1 {
     .form-button {
         text-align: right;
         margin-top: 10px;
+    }
+}
+
+.v-align {
+    display: table;
+    width: 100%;
+    height: 100%;
+    & > span {
+        display: table-cell;
+        vertical-align: middle;
     }
 }
 
