Add bubble directive + node configuration

--- a/client/src/scripts/components/bubblePan/partials/bubble-node.html
+++ b/client/src/scripts/components/bubblePan/partials/bubble-node.html
@@ -1,3 +1,3 @@
-<a class="bubble-node" ng-click="bubbleNodeCtrl.bubbleTouched($event)" draggable="true">
+<a class="bubble-node">
     <span class="v-align"><span>{{node.name}}</span></span>
 </a>
