--- a/client/src/scripts/components/bubblePan/partials/bubble-pan.html
+++ b/client/src/scripts/components/bubblePan/partials/bubble-pan.html
@@ -1,4 +1,8 @@
-<div class="bubble bubble-pan">
-    <bubble-node
-        node="node" ng-repeat="node in nodes"></bubble-node>
+<div class="bubble" >
+    <div class="bubble-tootlbox">
+        <button v-button><span class="glyphicon glyphicon-plus"></span></button>
+    </div>
+    <div class="bubble-pan">
+        <bubble-node ng-repeat="node in nodes"></bubble-node>
+    </div>
 </div>
