--- a/client/src/scripts/components/navigation/styles/navigation.scss
+++ b/client/src/scripts/components/navigation/styles/navigation.scss
@@ -5,7 +5,7 @@
     display: block;
     float: left;
     width: $menuWidth;
-    height: 100%;
+    height: 100vh;
     color: $lightTextColor;
     box-shadow: inset -5px 0px 8px rgba(0,0,0,0.3);
     text-align: center;
