--- a/client/src/scripts/components/bubblePan/styles/bubble.scss
+++ b/client/src/scripts/components/bubblePan/styles/bubble.scss
@@ -25,15 +25,11 @@
     }
 
     .bubble-node {
-        height: 150px;
-        width: 150px;
         position: absolute;
-        border-radius: 8000px;
-        background: $primaryColor;
-        border: 1px solid $primaryColor;
-        box-shadow: 0px 1px 3px $greyColor;
+        top: 0;
+      height: 150px;
+      width: 150px;
         text-align: center;
-        color: $lightTextColor;
         cursor: pointer;
     }
 
